Added DOCKER_CONFIG env to mysql action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -540,6 +540,8 @@ jobs:
       - uses: tryghost/mysql-action@docker-login-debugging
         if: matrix.env.DB == 'mysql8'
         timeout-minutes: 3
+        env:
+          DOCKER_CONFIG: /home/runner/.docker
         with:
           authentication plugin: 'caching_sha2_password'
           mysql version: '8.0'
