--- a/.docker/caddy/Caddyfile
+++ b/.docker/caddy/Caddyfile
@@ -2,14 +2,29 @@
 	local_certs
 }
 
-localhost {
+# Allow http to be used
+## Disables automatic redirect to https in development
+http://localhost {
     reverse_proxy server:2368
 }
 
+# Allow https to be used by explicitly requesting https://localhost
+## Note: Caddy uses self-signed certificates. Your browser will warn you about this.
+## Run `sudo ./.docker/caddy/trust_caddy_ca.sh` while the caddy container is running to trust the Caddy CA
+https://localhost {
+    reverse_proxy server:2368
+}
+
+# Access Ghost at https://site.ghost
+## Add the following to your /etc/hosts file:
+## 127.0.0.1 site.ghost
 site.ghost {
 	reverse_proxy server:2368
 }
 
+# Access Ghost Admin at https://admin.ghost/ghost
+## Add the following to your /etc/hosts file:
+## 127.0.0.1 admin.ghost
 admin.ghost {
     handle /ember-cli-live-reload.js {
         reverse_proxy admin:4200
