Added snippets to Caddyfile to reuse config block

--- a/.docker/caddy/Caddyfile
+++ b/.docker/caddy/Caddyfile
@@ -2,17 +2,26 @@
 	local_certs
 }
 
+# Run `sudo ./.docker/caddy/trust_caddy_ca.sh` while the caddy container is running to trust the Caddy CA
+(common_ghost_config) {
+    handle /ember-cli-live-reload.js {
+        reverse_proxy admin:4200
+    }
+
+    reverse_proxy server:2368
+}
+
 # Allow http to be used
 ## Disables automatic redirect to https in development
 http://localhost {
-    reverse_proxy server:2368
+    import common_ghost_config
 }
 
 # Allow https to be used by explicitly requesting https://localhost
 ## Note: Caddy uses self-signed certificates. Your browser will warn you about this.
 ## Run `sudo ./.docker/caddy/trust_caddy_ca.sh` while the caddy container is running to trust the Caddy CA
 https://localhost {
-    reverse_proxy server:2368
+    import common_ghost_config
 }
 
 # Access Ghost at https://site.ghost
