SPIKE - Extracted Koenig button renderer into Ghost
ref https://linear.app/ghost/issue/PROD-1784

- added `ghost/core/server/services/koenig` directory
- copied button-related renderer files over from Koenig and converted from ES6 modules to CJS
- updated call to our lexical renderer to pass our custom renderers object as an option
- NOTE: currently adds "CUSTOM" to text of all buttons to provide a visual indication of the custom renderer being used

--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -126,6 +126,7 @@
     "chalk": "4.1.2",
     "charset": "1.0.1",
     "cheerio": "0.22.0",
+    "clsx": "2.1.1",
     "cluster-key-slot": "1.1.2",
     "common-tags": "1.8.2",
     "compression": "1.8.0",
