--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -86,12 +86,12 @@
     "@tryghost/image-transform": "1.4.4",
     "@tryghost/job-manager": "1.0.1",
     "@tryghost/kg-card-factory": "5.1.1",
-    "@tryghost/kg-converters": "1.1.4",
+    "@tryghost/kg-converters": "1.1.5",
     "@tryghost/kg-default-atoms": "5.1.0",
-    "@tryghost/kg-default-cards": "10.1.2",
-    "@tryghost/kg-default-nodes": "1.4.18",
-    "@tryghost/kg-html-to-lexical": "1.2.18",
-    "@tryghost/kg-lexical-html-renderer": "1.3.18",
+    "@tryghost/kg-default-cards": "10.1.3",
+    "@tryghost/kg-default-nodes": "1.4.20",
+    "@tryghost/kg-html-to-lexical": "1.2.20",
+    "@tryghost/kg-lexical-html-renderer": "1.3.20",
     "@tryghost/kg-mobiledoc-html-renderer": "7.1.2",
     "@tryghost/limit-service": "1.2.18",
     "@tryghost/logging": "2.4.22",
@@ -126,6 +126,7 @@
     "chalk": "4.1.2",
     "charset": "1.0.1",
     "cheerio": "0.22.0",
+    "clsx": "2.1.1",
     "cluster-key-slot": "1.1.2",
     "common-tags": "1.8.2",
     "compression": "1.8.0",
@@ -215,7 +216,7 @@
     "xml": "1.0.1"
   },
   "optionalDependencies": {
-    "@tryghost/html-to-mobiledoc": "3.2.5",
+    "@tryghost/html-to-mobiledoc": "3.2.6",
     "sqlite3": "5.1.7"
   },
   "devDependencies": {
