--- a/compose.yml
+++ b/compose.yml
@@ -6,6 +6,7 @@ x-service-template: &service-template
     - .:/home/ghost
     - ${SSH_AUTH_SOCK}:/ssh-agent
     - ${HOME}/.gitconfig:/root/.gitconfig:ro
+    - ${HOME}/.yalc:/root/.yalc
     - node_modules_yarn_lock_hash:/home/ghost/.yarnhash:delegated
     - node_modules_ghost_root:/home/ghost/node_modules:delegated
     - node_modules_ghost_admin:/home/ghost/ghost/admin/node_modules:delegated
