--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -86,12 +86,14 @@
     "@tryghost/image-transform": "1.4.4",
     "@tryghost/job-manager": "1.0.1",
     "@tryghost/kg-card-factory": "5.1.1",
+    "@tryghost/kg-clean-basic-html": "4.2.5",
     "@tryghost/kg-converters": "1.1.5",
     "@tryghost/kg-default-atoms": "5.1.0",
     "@tryghost/kg-default-cards": "10.1.3",
     "@tryghost/kg-default-nodes": "1.4.20",
     "@tryghost/kg-html-to-lexical": "1.2.20",
     "@tryghost/kg-lexical-html-renderer": "1.3.20",
+    "@tryghost/kg-markdown-html-renderer": "7.1.2",
     "@tryghost/kg-mobiledoc-html-renderer": "7.1.2",
     "@tryghost/limit-service": "1.2.18",
     "@tryghost/logging": "2.4.22",
