Moved all apps packages to vitest
no ref

We're trying to unify the testing approaches for the /apps/, in particular those using admin-x-framework. Part of the fuzziness here is that we had a split mocha+vitest implementation, with some packages importing mocha without even using it. This is attempting to clean that up.

todo: We need to update vitest. 0.34.3 is almost two years old. Updating this might less us remove jest, as there's type issues causing problems that seemed to require this as a workaround.

--- a/apps/shade/tsconfig.json
+++ b/apps/shade/tsconfig.json
@@ -4,7 +4,7 @@
         "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "module": "ESNext",
         "skipLibCheck": true,
-        "types": ["vite/client", "mocha"],
+        "types": ["vite/client", "vitest/globals"],
 
         /* Bundler mode */
         "moduleResolution": "bundler",
