--- a/apps/admin-x-framework/package.json
+++ b/apps/admin-x-framework/package.json
@@ -74,12 +74,11 @@
     ],
     "devDependencies": {
         "@testing-library/react": "14.3.1",
-        "@types/mocha": "10.0.10",
+        "@testing-library/jest-dom": "5.17.0",
         "c8": "8.0.1",
         "eslint-plugin-react-hooks": "4.6.2",
         "eslint-plugin-react-refresh": "0.4.20",
         "jsdom": "24.1.3",
-        "mocha": "10.8.2",
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "sinon": "17.0.1",
