--- a/apps/admin-x-design-system/package.json
+++ b/apps/admin-x-design-system/package.json
@@ -41,7 +41,7 @@
     "@testing-library/react-hooks": "8.0.1",
     "@types/lodash-es": "4.17.12",
     "@vitejs/plugin-react": "4.5.0",
-    "c8": "8.0.1",
+    "@vitest/coverage-v8": "3.1.4",
     "chai": "4.5.0",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-refresh": "0.4.20",
@@ -55,9 +55,9 @@
     "storybook": "8.6.14",
     "typescript": "5.8.3",
     "validator": "13.12.0",
-    "vite": "4.5.14",
-    "vite-plugin-svgr": "3.3.0",
-    "vitest": "0.34.3"
+    "vite": "6.3.5",
+    "vite-plugin-svgr": "4.3.0",
+    "vitest": "3.1.4"
   },
   "dependencies": {
     "@dnd-kit/core": "6.3.1",
