--- a/apps/admin-x-framework/package.json
+++ b/apps/admin-x-framework/package.json
@@ -75,7 +75,7 @@
     "devDependencies": {
         "@testing-library/react": "14.3.1",
         "@testing-library/jest-dom": "5.17.0",
-        "c8": "8.0.1",
+        "@vitest/coverage-v8": "3.1.4",
         "eslint-plugin-react-hooks": "4.6.2",
         "eslint-plugin-react-refresh": "0.4.20",
         "jsdom": "24.1.3",
@@ -91,14 +91,14 @@
         "@tryghost/shade": "0.0.0",
         "@types/react": "18.3.23",
         "@types/react-dom": "18.3.7",
-        "@vitejs/plugin-react": "4.3.4",
+        "@vitejs/plugin-react": "4.5.0",
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "react-router": "7.6.1",
-        "vite": "5.4.19",
+        "vite": "6.3.5",
         "vite-plugin-css-injected-by-js": "3.5.2",
         "vite-plugin-svgr": "4.3.0",
-        "vitest": "1.6.0"
+        "vitest": "3.1.4"
     },
     "peerDependencies": {
         "react": "^18.2.0",
@@ -116,10 +116,11 @@
                     "^build"
                 ]
             },
+            "test": {
+                "dependsOn": []
+            },
             "test:unit": {
-                "dependsOn": [
-                    "^build"
-                ]
+                "dependsOn": []
             }
         }
     }
