--- a/apps/shade/package.json
+++ b/apps/shade/package.json
@@ -42,14 +42,14 @@
         "@types/lodash-es": "4.17.12",
         "@types/node": "22.15.21",
         "@vitejs/plugin-react": "4.5.0",
-        "c8": "8.0.1",
+        "@vitest/coverage-v8": "3.1.4",
         "chai": "4.5.0",
         "eslint-plugin-react-hooks": "4.6.2",
         "eslint-plugin-react-refresh": "0.4.20",
         "eslint-plugin-tailwindcss": "3.18.0",
         "jsdom": "24.1.3",
         "lodash-es": "4.17.21",
-        "vitest": "0.34.3"
+        "vitest": "3.1.4"
     },
     "dependencies": {
         "@dnd-kit/core": "6.3.1",
@@ -99,8 +99,8 @@
         "tailwindcss-animate": "1.0.7",
         "typescript": "5.8.3",
         "validator": "13.12.0",
-        "vite": "4.5.14",
-        "vite-plugin-svgr": "3.3.0",
+        "vite": "6.3.5",
+        "vite-plugin-svgr": "4.3.0",
         "zod": "3.25.29"
     },
     "peerDependencies": {
