--- a/apps/admin-x-activitypub/tsconfig.json
+++ b/apps/admin-x-activitypub/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "types": ["vite/client", "jest"],
+    "types": ["vite/client", "vitest/globals", "jest"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
