Added basic node renderer tests
ref https://linear.app/ghost/issue/PROD-1784

- added basic output regression tests for all node renderers
- added test utilities to facilitate testing node renderers without a full Lexical environment
- added e2e coverage exclude for koenig service folder as everything is integration/unit tested and covering all branches via e2e tests too doesn't add any value

--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -224,6 +224,7 @@
   "devDependencies": {
     "@actions/core": "1.11.1",
     "@playwright/test": "1.52.0",
+    "@prettier/sync": "0.5.5",
     "@tryghost/express-test": "0.14.1",
     "@tryghost/webhook-mock-receiver": "0.2.17",
     "@types/bookshelf": "1.2.9",
@@ -242,6 +243,7 @@
     "expect": "29.7.0",
     "find-root": "1.1.0",
     "form-data": "4.0.2",
+    "html-minifier": "4.0.0",
     "html-validate": "8.29.0",
     "inquirer": "8.2.6",
     "jwk-to-pem": "2.0.7",
