--- a/apps/stats/package.json
+++ b/apps/stats/package.json
@@ -34,9 +34,10 @@
         "@types/jest": "29.5.14",
         "@types/react": "18.3.23",
         "@types/react-svg-map": "2.1.4",
-        "@vitejs/plugin-react": "4.5.0",
-        "vite": "4.5.14",
-        "vitest": "0.34.3"
+        "@vitejs/plugin-react": "4.3.4",
+        "@vitest/coverage-v8": "2.1.8",
+        "vite": "5.4.19",
+        "vitest": "2.1.8"
     },
     "dependencies": {
         "@svg-maps/world": "1.0.1",
