--- a/apps/admin-x-framework/package.json
+++ b/apps/admin-x-framework/package.json
@@ -75,13 +75,13 @@
     "devDependencies": {
         "@testing-library/react": "14.3.1",
         "@testing-library/jest-dom": "5.17.0",
+        "@vitest/coverage-v8": "2.1.8",
         "c8": "8.0.1",
         "eslint-plugin-react-hooks": "4.6.2",
         "eslint-plugin-react-refresh": "0.4.20",
         "jsdom": "24.1.3",
         "react": "18.3.1",
         "react-dom": "18.3.1",
-        "sinon": "17.0.1",
         "typescript": "5.8.3"
     },
     "dependencies": {
@@ -91,14 +91,14 @@
         "@tryghost/shade": "0.0.0",
         "@types/react": "18.3.23",
         "@types/react-dom": "18.3.7",
-        "@vitejs/plugin-react": "4.5.0",
+        "@vitejs/plugin-react": "4.3.4",
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "react-router": "7.6.1",
-        "vite": "4.5.14",
+        "vite": "5.4.19",
         "vite-plugin-css-injected-by-js": "3.5.2",
         "vite-plugin-svgr": "3.3.0",
-        "vitest": "0.34.3"
+        "vitest": "2.1.8"
     },
     "peerDependencies": {
         "react": "^18.2.0",
