--- a/apps/shade/package.json
+++ b/apps/shade/package.json
@@ -41,7 +41,8 @@
         "@testing-library/react-hooks": "8.0.1",
         "@types/lodash-es": "4.17.12",
         "@types/node": "22.15.23",
-        "@vitejs/plugin-react": "4.5.0",
+        "@vitejs/plugin-react": "4.3.4",
+        "@vitest/coverage-v8": "2.1.8",
         "c8": "8.0.1",
         "chai": "4.5.0",
         "eslint-plugin-react-hooks": "4.6.2",
@@ -49,7 +50,7 @@
         "eslint-plugin-tailwindcss": "3.18.0",
         "jsdom": "24.1.3",
         "lodash-es": "4.17.21",
-        "vitest": "0.34.3"
+        "vitest": "2.1.8"
     },
     "dependencies": {
         "@dnd-kit/core": "6.3.1",
@@ -91,7 +92,6 @@
         "react-select": "5.10.1",
         "recharts": "2.15.3",
         "rollup-plugin-node-builtins": "2.1.2",
-        "sinon": "17.0.1",
         "sonner": "2.0.3",
         "storybook": "8.6.14",
         "tailwind-merge": "2.6.0",
@@ -99,7 +99,7 @@
         "tailwindcss-animate": "1.0.7",
         "typescript": "5.8.3",
         "validator": "13.12.0",
-        "vite": "4.5.14",
+        "vite": "5.4.19",
         "vite-plugin-svgr": "3.3.0",
         "zod": "3.25.29"
     },
