--- a/apps/admin-x-framework/package.json
+++ b/apps/admin-x-framework/package.json
@@ -75,6 +75,7 @@
     "devDependencies": {
         "@testing-library/react": "14.3.1",
         "@testing-library/jest-dom": "5.17.0",
+        "@vitejs/plugin-react": "4.3.4",
         "@vitest/coverage-v8": "2.1.8",
         "c8": "8.0.1",
         "eslint-plugin-react-hooks": "4.6.2",
@@ -82,7 +83,11 @@
         "jsdom": "24.1.3",
         "react": "18.3.1",
         "react-dom": "18.3.1",
-        "typescript": "5.8.3"
+        "typescript": "5.8.3",
+        "vite": "5.4.19",
+        "vite-plugin-css-injected-by-js": "3.5.2",
+        "vite-plugin-svgr": "3.3.0",
+        "vitest": "2.1.8"
     },
     "dependencies": {
         "@sentry/react": "7.120.3",
@@ -91,14 +96,9 @@
         "@tryghost/shade": "0.0.0",
         "@types/react": "18.3.23",
         "@types/react-dom": "18.3.7",
-        "@vitejs/plugin-react": "4.3.4",
         "react": "18.3.1",
         "react-dom": "18.3.1",
-        "react-router": "7.6.1",
-        "vite": "5.4.19",
-        "vite-plugin-css-injected-by-js": "3.5.2",
-        "vite-plugin-svgr": "3.3.0",
-        "vitest": "2.1.8"
+        "react-router": "7.6.1"
     },
     "peerDependencies": {
         "react": "^18.2.0",
