--- a/ghost/admin/package.json
+++ b/ghost/admin/package.json
@@ -73,6 +73,7 @@
     "ember-ajax": "5.1.2",
     "ember-assign-helper": "0.5.0",
     "ember-auto-import": "2.10.0",
+    "ember-basic-dropdown": "8.6.1",
     "ember-classic-decorator": "3.0.1",
     "ember-cli": "3.24.0",
     "ember-cli-app-version": "5.0.0",
@@ -111,7 +112,7 @@
     "ember-moment": "10.0.1",
     "ember-one-way-select": "4.0.1",
     "ember-power-datepicker": "cibernox/ember-power-datepicker",
-    "ember-power-select": "6.0.1",
+    "ember-power-select": "8.7.2",
     "ember-resolver": "8.1.0",
     "ember-simple-auth": "5.0.0",
     "ember-sinon": "5.0.0",
