--- a/apps/shade/package.json
+++ b/apps/shade/package.json
@@ -41,6 +41,7 @@
         "@testing-library/react-hooks": "8.0.1",
         "@types/lodash-es": "4.17.12",
         "@types/node": "22.15.24",
+        "@types/react-world-flags": "^1.6.0",
         "@vitejs/plugin-react": "4.5.0",
         "c8": "8.0.1",
         "chai": "4.5.0",
@@ -89,6 +90,7 @@
         "react-hook-form": "7.56.4",
         "react-hot-toast": "2.5.2",
         "react-select": "5.10.1",
+        "react-world-flags": "^1.6.0",
         "recharts": "2.15.3",
         "rollup-plugin-node-builtins": "2.1.2",
         "sinon": "17.0.1",
