Renamed regression tests to legacy
- These are some very very old tests
- I'm not sure why we ever used the name regression as they're
  not really regression tests except in the fact that they run
  against some edge cases
- We split these out from e2e to try to make the standard test suite faster
- All the tests in this group need assessing and either rewriting,
  moving to the e2e suites or deleting
- This rename helps to make it clear that these tests are old, legacy
  code that we need to sure up or delete!

--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -36,18 +36,18 @@
     "test:unit:base": "yarn test:base './test/unit' --timeout=2000",
     "test:integration": "yarn test:base './test/integration' --timeout=10000",
     "test:e2e": "yarn test:base ./test/e2e-* --timeout=15000",
-    "test:regression": "yarn test:base './test/regression' --timeout=60000",
+    "test:legacy": "yarn test:base './test/legacy' --timeout=60000",
     "test:browser": "NODE_ENV=testing-browser playwright test",
     "test:browser:admin": "NODE_ENV=testing-browser  playwright test test/e2e-browser --project=admin",
     "test:browser:portal": "NODE_ENV=testing-browser playwright test test/e2e-browser --project=portal",
     "test:browser:setup": "npx playwright install",
     "test:ci:e2e": "c8 -c ./.c8rc.e2e.json -o coverage-e2e yarn test:e2e -b",
-    "test:ci:regression": "yarn test:regression -b",
+    "test:ci:legacy": "yarn test:legacy -b",
     "test:ci:integration": "c8 -c ./.c8rc.e2e.json -o coverage-integration --lines 52 --functions 47 --branches 73 --statements 52 yarn test:integration -b",
     "test:unit:slow": "yarn test:unit --reporter=mocha-slow-test-reporter",
     "test:int:slow": "yarn test:integration --reporter=mocha-slow-test-reporter",
     "test:e2e:slow": "yarn test:e2e --reporter=mocha-slow-test-reporter",
-    "test:reg:slow": "mocha --reporter dot --require=./test/utils/overrides.js --exit --trace-warnings --recursive --extension=test.js  './test/regression' --timeout=60000 --reporter=mocha-slow-test-reporter",
+    "test:leg:slow": "mocha --reporter dot --require=./test/utils/overrides.js --exit --trace-warnings --recursive --extension=test.js  './test/legacy' --timeout=60000 --reporter=mocha-slow-test-reporter",
     "lint:server": "eslint --ignore-path .eslintignore 'core/server/**/*.js' 'core/*.js' '*.js' --cache",
     "lint:shared": "eslint --ignore-path .eslintignore 'core/shared/**/*.js' --cache",
     "lint:frontend": "eslint --ignore-path .eslintignore 'core/frontend/**/*.js' --cache",
