--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -556,7 +556,6 @@ jobs:
           path: |
             ghost/*/coverage-e2e/cobertura-coverage.xml
             ghost/*/coverage-integration/cobertura-coverage.xml
-            ghost/*/coverage-regression/cobertura-coverage.xml
 
       # Continue on error if TailScale service is down
       - name: Tailscale Action
@@ -600,7 +599,7 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
-  job_regression-tests:
+  job_legacy-tests:
     runs-on: ubuntu-latest
     needs: [job_setup]
     if: needs.job_setup.outputs.changed_core == 'true'
@@ -618,7 +617,7 @@ jobs:
     env:
       DB: ${{ matrix.env.DB }}
       NODE_ENV: ${{ matrix.env.NODE_ENV }}
-    name: Regression tests (Node ${{ matrix.node }}, ${{ matrix.env.DB }})
+    name: Legacy tests (Node ${{ matrix.node }}, ${{ matrix.env.DB }})
     steps:
       - uses: actions/checkout@v4
         with:
@@ -655,9 +654,9 @@ jobs:
         if: contains(matrix.env.DB, 'mysql')
         run: echo "database__connection__password=root" >> $GITHUB_ENV
 
-      - name: Regression tests
+      - name: Legacy tests
         working-directory: ghost/core
-        run: yarn test:ci:regression
+        run: yarn test:ci:legacy
 
       - uses: tryghost/actions/actions/slack-build@main
         if: failure() && github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -958,7 +957,7 @@ jobs:
         job_admin-tests,
         job_unit-tests,
         job_database-tests,
-        job_regression-tests,
+        job_legacy-tests,
         job_browser-tests,
         job_admin_x_settings,
         job_comments_ui,
